--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,67 +1,67 @@
-:root{
-  --background-color:#f5f5f5;
-  --button-colors:#ff6f61;
-  --form-highlight:#ffc1cc;
+:root {
+  --background-color: #f5f5f5;
+  --button-colors: #ff6f61;
+  --form-highlight: #ffc1cc;
   --button-effects: #f8d5d8;
-  --input-highlight:#f8d5d8;
+  --input-highlight: #f8d5d8;
   --clr-accent-500: hsl(12, 60%, 45%);
   -clr-accent-400: hsl(12, 88%, 59%);
   --clr-accent-300: hsl(12, 88%, 75%);
 
--ff-primary: "Be Vietnam Pro", sans-serif;
+  -ff-primary: "Be Vietnam Pro", sans-serif;
 
-    --ff-body: var(--ff-primary);
-    --ff-heading: var(--ff-primary);
+  --ff-body: var(--ff-primary);
+  --ff-heading: var(--ff-primary);
 
-    --fw-regular: 400;
-    --fw-semi-bold: 500;
-    --fw-bold: 700;
+  --fw-regular: 400;
+  --fw-semi-bold: 500;
+  --fw-bold: 700;
 
-    --fs-300: 0.8125rem;
-    --fs-400: 0.875rem;
-    --fs-500: 0.9375rem;
-    --fs-600: 1rem;
-    --fs-700: 1.875rem;
-    --fs-800: 2.5rem;
-    --fs-900: 3.5rem;
+  --fs-300: 0.8125rem;
+  --fs-400: 0.875rem;
+  --fs-500: 0.9375rem;
+  --fs-600: 1rem;
+  --fs-700: 1.875rem;
+  --fs-800: 2.5rem;
+  --fs-900: 3.5rem;
 
-    --size-100: 0.25rem;
-    --size-200: 0.5rem;
-    --size-300: 0.75rem;
-    --size-400: 1rem;
-    --size-500: 1.5rem;
-    --size-600: 2rem;
-    --size-700: 15rem;
-    --size-800: 4rem;
-    --size-900: 5rem;
-    
-    --fs-primary-heading: var(--fs-800);
-    --fs-secondary-heading: var(--fs-700);
-    --fs-body: var(--fs-400);
-    --fs-nav: var(--fs-500);
-    --fs-button: var(--fs-300);
+  --size-100: 0.25rem;
+  --size-200: 0.5rem;
+  --size-300: 0.75rem;
+  --size-400: 1rem;
+  --size-500: 1.5rem;
+  --size-600: 2rem;
+  --size-700: 15rem;
+  --size-800: 4rem;
+  --size-900: 5rem;
+
+  --fs-primary-heading: var(--fs-800);
+  --fs-secondary-heading: var(--fs-700);
+  --fs-body: var(--fs-400);
+  --fs-nav: var(--fs-500);
+  --fs-button: var(--fs-300);
 }
 
 body {
   text-rendering: optimizeSpeed;
   line-height: 1.5;
-  background-color:#eeefe2;
+  background-color: #eeefe2;
 }
-img{
+img {
   max-width: 100%;
 }
 @media (prefers-reduced-motion: reduce) {
   html:focus-within {
-      scroll-behavior: auto;
+    scroll-behavior: auto;
   }
 
   *,
   *::before,
   *::after {
-      animation-duration: 0.01ms !important;
-      animation-iteration-count: 1 !important;
-      transition-duration: 0.01ms !important;
-      scroll-behavior: auto !important;
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
   }
 }
 .fs-primary-heading {
@@ -78,8 +78,8 @@ img{
 
   width: min(var(--max-width), 100% - (var(--padding) * 2));
   margin-inline: auto;
-  margin-top: 60px;;
-  border:solid 3px rgb(24, 24, 23);
+  margin-top: 60px;
+  border: solid 3px rgb(24, 24, 23);
   padding: 30px;
   border-radius: 10px;
 }
@@ -104,7 +104,7 @@ img{
 
 .btn:hover,
 .btn:focus-visible {
-  background-color:#F6E0B3;
+  background-color: #f6e0b3;
 }
 
 .btn[data-type="inverted"]:hover,
@@ -112,48 +112,69 @@ img{
   background-color: var(--button-effects);
   color: var(--clr-accent-300);
 }
-.formfieldset{
-  height:45px;
+.formfieldset {
+  height: 45px;
   background-color: whitesmoke;
   border-radius: 5px;
   margin-bottom: 10px;
-
 }
-.formInput{
+.formInput {
   margin-top: 0px;
   padding: 10px 12px;
   box-sizing: border-box;
   border: none;
-  width:100%;
-  height:20px;
+  width: 100%;
+  height: 20px;
   background-color: transparent;
   outline: none;
 }
-.SignInForm{
+.SignInForm {
   max-width: 400px;
-  height:600px;
+  height: 600px;
   margin: 2rem auto;
   padding: 2rem;
-  background-color:rgba(211, 211, 211, 0.6);
+  background-color: rgba(211, 211, 211, 0.6);
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
   font-family: var(--ff-body);
 }
-.Block{
-  margin-top:70px;
+.Block {
+  margin-top: 70px;
 }
-.btn{
+.btn {
   display: block;
 
-    margin:0px auto;
-    width:100px;
-    height:50px;
-    border-radius: 35px;
-    text-align: center;
+  margin: 0px auto;
+  width: 100px;
+  height: 50px;
+  border-radius: 35px;
+  text-align: center;
 }
-.formLegend{
+.formLegend {
   border: 2px solid whitesmoke;
-  top:50%;
+  top: 50%;
   border-bottom: none;
-  background-color:whitesmoke;
+  background-color: whitesmoke;
+}
+.logo {
+  width: 200px;
+  height: 200px;
+}
+
+.Headcontainer {
+  margin-top: 40px;
+  background-color: rgba(211, 211, 211, 0.6);
+  height: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.5rem;
+}
+
+.link:hover {
+  color: darkgray;
+  cursor: pointer;
+}
+.link {
+  text-decoration: none;
 }
