--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -449,3 +449,40 @@ main{
 .btn-menu2:hover{
   background-color: #484650;
 }
+.pen{
+  width:18px;
+  margin-bottom: 0px;
+  cursor: pointer;
+}
+.pen:hover{
+  color:plum;
+}
+.modal-style{
+  display: flex;
+  flex-direction: column;
+  height:450px;
+  width:300px;
+  border:1px solid black;
+  align-items: center;
+  margin: auto;
+  padding: 40px;
+  margin-top: 50px;
+  background-color: rgba(0,0,0, 0.5);
+  backdrop-filter: blur(8px);
+  box-shadow: inset -5px -5px rgba(0, 0, 0, 0.5);
+  border-radius: 25px;
+  margin-right: 10vw;
+
+}
+
+
+main {
+	height: 100%;
+	position: relative;
+}
+.modal-btns{
+  display: flex;
+  margin-top: -400px;
+  justify-content: space-between;
+
+}
